[package]
name = "toast_notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.windows]
version = "0.43"
features = [
    "UI_Notifications",
    "UI_Notifications_Management",
    "Data_Xml_Dom"
]